# spider

./: Cargo.toml
spider/: Cargo.toml
spider/src/: configuration.rs  fetch_engine.rs  lib.rs  page.rs  website.rs
spider/src/features/: chrome.rs  glob.rs  solvers.rs
spider/src/utils/: interner.rs  mod.rs
spider/tests/: fetch_engine_offline.rs
spider_agent/: Cargo.toml
spider_agent/src/: agent.rs
spider_agent/src/automation/: helpers.rs
spider_agent_html/: Cargo.toml
spider_agent_types/: Cargo.toml
spider_cli/: Cargo.toml
spider_doc_ir/: Cargo.toml
spider_doc_ir/src/: lib.rs
spider_mcp/: Cargo.toml
spider_mcp/src/: state.rs
spider_mcp/src/tools/: crawl.rs
spider_utils/: Cargo.toml
spider_worker/: Cargo.toml
spider_worker/src/: main.rs
